kubernetes/apps/traefik/namespace.yml
# kubernetes\apps\traefik\namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
