kubernetes/apps/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: "traefik-static-ip"
spec:
  selector:
    app: traefik
  type: LoadBalancer
  loadBalancerIP: 10.0.1.110
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websecure
      port: 443
      targetPort: 443
      protocol: TCP
