kubernetes/apps/traefik/service.yml
# kubernetes\apps\traefik\service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
  - name: dashboard
    port: 8081
    targetPort: 8081
    nodePort: 32080
  type: NodePort
